# 3dfx-project

./: CMakeLists.txt  LICENSE  README.md  Readme.txt  STEP-1-GENERATE_SOLUTION VS2022.bat  STEP-2-CreatemLinkToAssetsForStudioAndVSCode.bat  runVSCode64.bat
Assets/: Grass_01.3df
Sources/: FxCustomMesh.cpp  FxCustomMesh.h  FxDrawable.cpp  FxDrawable.h  FxStaticModel.cpp  FxStaticModel.h  FxTexture.cpp  FxTexture.h  bbox.h  camera.cpp  camera.h  clip.cpp  clip.h  framestat.cpp  framestat.h  glide_demo.cpp  glide_demo.h  glide_utils.cpp  glide_utils.h  matrix.cpp  matrix.h  pipeline.cpp  pipeline.h  super_header.h  vertex_structs.cpp  vertex_structs.h  window.cpp  window.h
texus32/: 1.cmd  3dfxlogo.tga  3dfxlogo_256.3df  3dfxlogo_256.tga  Grass_01.tga  help.cmd  whitePuff24.3df  whitePuff24.tga
